view: fix critical message when a NULL StyleScheme is set

_gtk_source_style_scheme_apply() doesn't accept a NULL StyleScheme,
which is normal.

Factor out the update_style() function, to avoid code duplication, since
the code was correct at one place and incorrect at another place.

https://bugzilla.gnome.org/show_bug.cgi?id=760984